src/test/ui/feature-gate-optimize_attribute.stderr
error[E0658]: #[optimize] attribute is an unstable feature
  --> $DIR/feature-gate-optimize_attribute.rs:7:1
   |
LL | #[optimize(size)]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54882
   = help: add #![feature(optimize_attribute)] to the crate attributes to enable

error[E0658]: #[optimize] attribute is an unstable feature
  --> $DIR/feature-gate-optimize_attribute.rs:10:1
   |
LL | #[optimize(speed)]
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54882
   = help: add #![feature(optimize_attribute)] to the crate attributes to enable

error[E0658]: #[optimize] attribute is an unstable feature
  --> $DIR/feature-gate-optimize_attribute.rs:13:1
   |
LL | #[optimize(banana)]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54882
   = help: add #![feature(optimize_attribute)] to the crate attributes to enable

error[E0658]: #[optimize] attribute is an unstable feature
  --> $DIR/feature-gate-optimize_attribute.rs:4:1
   |
LL | #[optimize(size)]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54882
   = help: add #![feature(optimize_attribute)] to the crate attributes to enable

error[E0658]: #[optimize] attribute is an unstable feature
  --> $DIR/feature-gate-optimize_attribute.rs:2:1
   |
LL | #![optimize(speed)]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54882
   = help: add #![feature(optimize_attribute)] to the crate attributes to enable

error[E0722]: invalid argument
  --> $DIR/feature-gate-optimize_attribute.rs:13:12
   |
LL | #[optimize(banana)]
   |            ^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
